--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <script src="main.js"></script>
 </body>
 <html>
