--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <script src="main.js"></script>
+    <h1>Hello, World!</h1>
+    <p>Enjoy this very simple test page.</p>
 </body>
 <html>
