attempt to fix js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <script src="main.js"></script>
+    <script> 
+    const hello = "world";
+console.log(hello);
+
+const name = window.prompt("What is your name?");
+console.log("Hello, " = name);
+
+    </script>
     <h1>Hello, World!</h1>
     <p>Enjoy this very simple test page.</p>
 </body>
