--- a/week1/index.html
+++ b/week1/index.html
@@ -8,14 +8,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <script> 
-    const hello = "world";
-console.log(hello);
-
-const name = window.prompt("What is your name?");
-console.log("Hello, " = name);
-
-    </script>
+    <script src="main.js"></script>
     <h1>Hello, World!</h1>
     <p>Enjoy this very simple test page.</p>
 </body>
