--- a/week1/assignment/index.html
+++ b/week1/assignment/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Snow Creature</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <script src="p5test.js"></script>
-
+    <script src="p5.js"></script>
+    <script src="snowcreature.js"></script>
 </body>
 <html>
