--- a/week1/assignment/part1/index.html
+++ b/week1/assignment/part1/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
-    <script src="snowcreature.js"></script>
+    <script src="blanksnowcreature.js"></script>
 </body>
 <html>
 
