Css, Remaining JS

--- a/week2/objects/index.html
+++ b/week2/objects/index.html
@@ -8,7 +8,7 @@
     <title>Objects</title>
 </head>
 <body>
-    Look in the console for everything!
+    Game Page! Check out the console!
     <script src="objects.js"></script>
 </body>
 <html>
