index and css update

--- a/week2/assignment/index.html
+++ b/week2/assignment/index.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css">
-    <title>Quizzy</title>
+    <title>Riddle Quiz</title>
 </head>
 <body>
     <script src="quiz.js"></script>
+    <h1>Refresh for another riddle!</h1>
 </body>
 <html>
 
