--- a/week3/assignment2/index.html
+++ b/week3/assignment2/index.html
@@ -9,5 +9,6 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
     <script src="spirograph.js"></script>
+    <h1>Click to freeze, Release to start.</h1>
 </body>
 <html>
