--- a/week6/llama/index.html
+++ b/week6/llama/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <link rel="stylesheet" href="lib/style.css">
+    <link rel="stylesheet" href="main.css">
     <title>Llama Facts!</title>
   </head>
 
@@ -10,18 +10,18 @@
     <h1>Llamarama</h1>
     <h2>Llama Facts:</h2>
     <ul>
-        <li id="">{{message}}</li>
-        <li id="">{{message}}</li>
-        <li id="">{{message}}</li>
-        <li id="">{{message}}</li>
-        <li id="">{{message}}</li>
-        <li id="">{{message}}</li>
-        <li id="">{{message}}</li>
-        <li id="">{{message}}</li>
-        <li id="">{{message}}</li>
-        <li id="">{{message}}</li>
+        <li id="glama">{{message}}</li>
+        <li id="peru">{{message}}</li>
+        <li id="history">{{message}}</li>
+        <li id="baby">{{message}}</li>
+        <li id="family">{{message}}</li>
+        <li id="guard">{{message}}</li>
+        <li id="age">{{message}}</li>
+        <li id="fur">{{message}}</li>
+        <li id="wild">{{message}}</li>
+        <li id="mn">{{message}}</li>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="llamavue.js"></script>
   </body>
 </html>
