--- a/week6/llama/index.html
+++ b/week6/llama/index.html
@@ -2,14 +2,16 @@
 
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>Llama Facts!</title>
   </head>
 
   <body>
-    <h1>Llamarama</h1>
+    <h1>Llama-rama</h1>
     <h2>Llama Facts:</h2>
-    <ul>
+    <ul id="llamafacts">
         <li id="glama">{{message}}</li>
         <li id="peru">{{message}}</li>
         <li id="history">{{message}}</li>
