--- a/week6/llama/index.html
+++ b/week6/llama/index.html
@@ -12,16 +12,16 @@
     <h1>Llama-rama</h1>
     <h2>Llama Facts:</h2>
     <ul id="llamafacts">
-        <li id="glama">{{message}}</li>
-        <li id="peru">{{message}}</li>
-        <li id="history">{{message}}</li>
-        <li id="baby">{{message}}</li>
-        <li id="family">{{message}}</li>
-        <li id="guard">{{message}}</li>
-        <li id="age">{{message}}</li>
-        <li id="fur">{{message}}</li>
-        <li id="wild">{{message}}</li>
-        <li id="mn">{{message}}</li>
+        <li id="glama">{{glama}}</li>
+        <li id="peru">{{peru}}</li>
+        <li id="history">{{history}}</li>
+        <li id="baby">{{baby}}</li>
+        <li id="family">{{family}}</li>
+        <li id="guard">{{guard}}</li>
+        <li id="age">{{age}}</li>
+        <li id="fur">{{fur}}</li>
+        <li id="wild">{{wild}}</li>
+        <li id="mn">{{mn}}</li>
 
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="llamavue.js"></script>
