--- a/week6/llama/index.html
+++ b/week6/llama/index.html
@@ -10,8 +10,9 @@
 
   <body>
     <h1>Llama-rama</h1>
-    <h2>Llama Facts:</h2>
-    <ul id="llamafacts">
+     <img id='meme' src='llama.png' height='300' alt='llama meme'>
+     <h2>Llama Facts:</h2>
+     <ul id="llamafacts">
         <li id="glama">{{glama}}</li>
         <li id="peru">{{peru}}</li>
         <li id="history">{{history}}</li>
@@ -22,8 +23,9 @@
         <li id="fur">{{fur}}</li>
         <li id="wild">{{wild}}</li>
         <li id="mn">{{mn}}</li>
-
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    </ul>
+    <img id='meme' src='bye.jpg' height='300' alt='another llama meme'>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="llamavue.js"></script>
   </body>
 </html>
