updates to JS and html

--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>Show and Tell</title>
-  </head>
+ </head>
 
   <body>
     <h1>Show and Tell</h1>
+    <div id="myCollection">
+      <p v-for="nickname in art">hi</p>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="showtell.js"></script>
   </body>
