--- a/week12/assignment/index.html
+++ b/week12/assignment/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Soundboard!</title>
+    <title>Storm Board!</title>
  </head>
 
   <body>
-    <h1>Click in the box!</h1>
+    <h1></h1>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="https://github.com/mabb422/p5.js-sound.git"></script>
     <script src="sounds.js"></script>
