--- a/week11/assignment/index.html
+++ b/week11/assignment/index.html
@@ -10,10 +10,9 @@
 
   <body>
     <h1>Lets Repeat</h1>
-    <a href="repeat1.html">Repeat1</a>
-    <a href="repeat2.html">Repeat2</a>
-    <a href="repeat3.html">Repeat3</a>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-    <script src="iteration.js"></script>
-  </body>
+    <p><a href="repeat1.html">Color Tiles</a></p>
+    <p><a href="repeat2.html">Repeated Images</a></p>
+    <p><a href="repeat3.html">Happy Little Repeats</a></p>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script> 
+</body>
 </html>
