--- a/week11/assignment/repeat2.html
+++ b/week11/assignment/repeat2.html
@@ -10,7 +10,7 @@
 
   <body>
     <h1>Lets Repeat: Repeated Images</h1>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
     <script src="repeat2.js"></script>
   </body>
 </html>
