--- a/week10/json/index.html
+++ b/week10/json/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>JSON</title>
+    <title>Music List</title>
  </head>
 
   <body>
-    <h1>JSON</h1>
-
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <h1>Billboard Top Streaming Tracks</h1>
+    <div id="musicApp" class="track-wrapper">
+      <streaming-track v-bind:track="song" v-for="song in tracks"></streaming-track>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js"></script>  
     <script src="json.js"></script>
   </body>
 </html>
