norris and fixes

--- a/week10/assignment/index.html
+++ b/week10/assignment/index.html
@@ -9,8 +9,11 @@
  </head>
 
   <body>
-
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <h1>THE CNDB</h1>
+    <h2>Enjoy a random joke from the Chuck Norris Joke Database</h2>
+    <div id="icndbApp" class="icndb-wrap"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js"></script>
     <script src="norris.js"></script>
   </body>
 </html>
