Anatomy of a check, updates to both pages and JS's

--- a/week14/final/index.html
+++ b/week14/final/index.html
@@ -10,7 +10,7 @@
 
  <body>
     <h1>Common Check Scams</h1>
-    <p>Every year the FTC recieves tens of thousands of reports about fake checks. These are scams where the victim recieves a fake or invalid check which is deposited into their account, money is sent back to the scammer or a third party, and then the check 'bounces' so the victim's account is charged for whatever money they sent. The number is steadily increasing. WHile scammers will always find new ways to take money, these are the most common fake-check scams. </p>
+    <p>Every year the FTC recieves tens of thousands of reports about fake <a href=scams.html>checks</a>. These are scams where the victim recieves a fake or invalid check which is deposited into their account, money is sent back to the scammer or a third party, and then the check 'bounces' so the victim's account is charged for whatever money they sent. The number is steadily increasing. While scammers will always find new ways to take money, these are the most common fake-check scams. </p>
     <div id="app">
        <div class="collectionWrapper">
             <div class="collectionRow" v-for="scam in scams" v-cloak>
@@ -26,6 +26,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
     <script src="final.js"></script>
-    <script src="check.js"></script>
+<!--  <script src="check.js"></script>      -->  
    </body>
  </html>
