updates to all pages

--- a/week14/final/scams.html
+++ b/week14/final/scams.html
@@ -9,7 +9,12 @@
  </head>
 
  <body>
-    <h1>Anatomy of a Check</h1>
+    <header>
+        <h1>Anatomy of a Check</h1>
+    </header>
+    <main>
+        <a href="index.html">Home</a>
+    </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
     <script src="check.js"></script>
    </body>
