--- a/week14/final/scams.html
+++ b/week14/final/scams.html
@@ -11,9 +11,14 @@
  <body>
     <header>
         <h1>Anatomy of a Check</h1>
+        <div class="toolbar">
+            <a href="index.html">Home</a>
+        </div>
     </header>
     <main>
-        <a href="index.html">Home</a>
+        <div class="description second-description">
+            <p>You should never accept a check from someone you don't personally know, but it's good to be aware of some red flags if you do! Hover over the check for some red flags to be aware of. </p>
+        </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
     <script src="check.js"></script>
