updated 3rd page, touchups CSS

--- a/week14/final/index.html
+++ b/week14/final/index.html
@@ -18,7 +18,15 @@
     </div>
   </header>
   <main>
-
+    <div class="description_home">
+      <p>Scammers are getting more and more sophisticated every single day. One of the most common types of scam involves the victim recieving a fake check. These checks are often extremely hard to detect, even by bank employees.</p>
+      <img src="check.png">
+      <p>Banks are required to make funds available within days of deposit, even if the check has not fully cleared. This means its very easy for victims to withdraw money without any knowledge the check is fake. By the time the check is dicovered the scammer has likely disappeared with the money, and the victim is left paying a negative balance.</p>
+      <div class="buttons">
+        <a class="button_item" href="scams.html">Common Check Scams</a>
+        <a class="button_item" href="anatomy.html">Red Flag Breakdown</a>
+      </div>
+    </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
