--- a/week14/final/anatomy.html
+++ b/week14/final/anatomy.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <div class="description second-description">
-            <p>You should never accept a check from someone you don't personally know, but it's good to be aware of some red flags if you do! Hover over the check for some red flags to be aware of. </p>
+            <p>You should never accept a check from someone you don't personally know, but it's good to be aware of some red flags if you do! Hover over the check for some questions you should ask yourself if you have recieved a check you suspect might be fake. </p>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
         <script src="check.js"></script>
