--- a/week14/final/anatomy.html
+++ b/week14/final/anatomy.html
@@ -5,24 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/89d41ecedb.js" crossorigin="anonymous"></script>
     <title>Final</title>
  </head>
 
  <body>
     <header>
         <h1>Anatomy of a Check</h1>
-        <div class="toolbar">
-            <a class="toolbar_item" href="index.html">Home</a> |
-            <a class="toolbar_item" href="scams.html">Scams</a> |
-            <a class="toolbar_item" href="anatomy.html">Red Flags</a>
+        <div class="menu">
+            <a class="menu_item" href="index.html">Home</a> |
+            <a class="menu_item" href="scams.html">Scams</a> |
+            <a class="menu_item" href="anatomy.html">Red Flags</a>
         </div>
     </header>
     <main>
         <div class="description second-description">
             <p>You should never accept a check from someone you don't personally know, but it's good to be aware of some red flags if you do! Hover over the check for some questions you should ask yourself if you have recieved a check you suspect might be fake. </p>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
-        <script src="check.js"></script>
     </main>
+    <footer>
+        <p class="copyright"><i class="far fa-copyright"></i> mbaddin 2021</p>
+        <div class="menu">
+            <a class="menu_item" href="index.html">Home</a> |
+            <a class="menu_item" href="scams.html">Scams</a> |
+            <a class="menu_item" href="anatomy.html">Red Flags</a>
+        </div>
+      </footer>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
+      <script src="check.js"></script>
    </body>
  </html>
