--- a/week14/final/index.html
+++ b/week14/final/index.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/89d41ecedb.js" crossorigin="anonymous"></script>
     <title>Final</title>
  </head>
 
  <body>
   <header>
     <h1>Scam Central</h1>
-    <div class="toolbar">
-        <a class="toolbar_item" href="index.html">Home</a> |
-        <a class="toolbar_item" href="scams.html">Scams</a> |
-        <a class="toolbar_item" href="anatomy.html">Red Flags</a>
+    <div class="menu">
+        <a class="menu_item" href="index.html">Home</a> |
+        <a class="menu_item" href="scams.html">Scams</a> |
+        <a class="menu_item" href="anatomy.html">Red Flags</a>
     </div>
   </header>
   <main>
@@ -28,6 +29,14 @@
       </div>
     </div>
   </main>
+  <footer>
+    <p class="copyright"><i class="far fa-copyright"></i> mbaddin 2021</p>
+    <div class="menu">
+        <a class="menu_item" href="index.html">Home</a> |
+        <a class="menu_item" href="scams.html">Scams</a> |
+        <a class="menu_item" href="anatomy.html">Red Flags</a>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
   <script src="final.js"></script>
