final touch-ups

--- a/week14/final/anatomy.html
+++ b/week14/final/anatomy.html
@@ -10,7 +10,7 @@
  </head>
 
  <body>
-    <header>
+    <header class="nav-bar">
         <h1>Anatomy of a Check</h1>
         <div class="menu">
             <a class="menu_item" href="index.html">Home</a> |
@@ -23,7 +23,7 @@
             <p>You should never accept a check from someone you don't personally know, but it's good to be aware of some red flags if you do! Hover over the check for some questions you should ask yourself if you have recieved a check you suspect might be fake. </p>
         </div>
     </main>
-    <footer>
+    <footer class="nav-bar">
         <p class="copyright"><i class="far fa-copyright"></i> mbaddin 2021</p>
         <div class="menu">
             <a class="menu_item" href="index.html">Home</a> |
