--- a/week14/final/index.html
+++ b/week14/final/index.html
@@ -10,7 +10,7 @@
  </head>
 
  <body>
-  <header>
+  <header class="nav-bar">
     <h1>Scam Central</h1>
     <div class="menu">
         <a class="menu_item" href="index.html">Home</a> |
@@ -29,7 +29,7 @@
       </div>
     </div>
   </main>
-  <footer>
+  <footer class="nav-bar">
     <p class="copyright"><i class="far fa-copyright"></i> mbaddin 2021</p>
     <div class="menu">
         <a class="menu_item" href="index.html">Home</a> |
